Modificacion menor para agregar el Nombre del usuario al momento de contactar a soporte

--- a/frontend/chat_widget.html
+++ b/frontend/chat_widget.html
@@ -1087,7 +1087,7 @@
 
                     this.addMessage(
                         "Entiendo que prefieres hablar con alguien directamente. " +
-                        "Por favor, ¿podrías dejarme tu correo electrónico o número de teléfono " +
+                        "Por favor, ¿podrías dejarme tu Nombre, correo electrónico o número de teléfono " +
                         "para que un representante se pueda poner en contacto contigo?",
                         'bot'
                     );
